// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - harvest allocates fee to recipient when delta is above zero 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 118849,
}
`;

exports[`EthVault - harvest applies penalty when delta is below zero 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 92403,
}
`;

exports[`EthVault - harvest updates exit queue 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 140816,
}
`;
